ui->unhandled uninitialised
On d911edd4 I'm getting a crash calling ui->unhandled in the RingsPanel, while the actual reason for calling unhandled is probably fixed by 01ef86aa, the crash is due to no one setting ui->unhandled:
#0 0x000000033f800000 in ?? () #1 (closed) 0x0000000000527074 in decode_pkt3 (asic=0x7fad980147e0, ui=0x7ffe9069f3e0, stream=0x2268c30, ib_addr=120, ib_vmid=0) at /discs/more/git/umr/src/lib/pm4_decode_opcodes.c:1154 1152 default: 1153 if (ui->unhandled) 1154 ui->unhandled(ui, asic, ib_addr, ib_vmid, stream, UMR_RING_PM4);
(gdb) p/x ui.unhandled $1 = 0x33f800000
rings_panel.cpp has: struct umr_stream_decode_ui ui; ui.rt = type; ui.start_ib = _start_ib; ui.unhandled_dword = NULL; ui.start_opcode = _start_opcode; ui.add_field = _add_field; ui.add_shader = _add_shader; ui.add_data = _add_data; ui.done = _done;
so it's just junk in there.