gui: zero init umr_stream_decode_ui

Closes:  https://gitlab.freedesktop.org/tomstdenis/umr/-/issues/23

Signed-off-by: Pierre-Eric Pelloux-Prayer <pierre-eric.pelloux-prayer@amd.com>